--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "dotenv": "^8.2.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
